add picture folder(companies-north-america)

--- a/companies-north-america/equifax.html
+++ b/companies-north-america/equifax.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Types of Vulnerabilities</title>
+		<title>Equifax</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/pictiure-north-america/equifax.webp" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,22 +318,38 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Unpatched Apache Struts Vulnerability</h1>
-                <p class="pl-4">- Equifax used the Apache Struts framework in its web applications, which contained a critical vulnerability. A patch for the flaw was released in March 2017, but Equifax failed to apply it in a timely manner. Attackers exploited this gap to execute arbitrary commands on the affected server. This oversight allowed them to gain initial access and begin data extraction.</p>
+                <p class="">Equifax used the Apache Struts framework in its web applications, which contained a critical vulnerability. A patch for the flaw was released in March 2017, but Equifax failed to apply it in a timely manner. Attackers exploited this gap to execute arbitrary commands on the affected server. This oversight allowed them to gain initial access and begin data extraction.</p>
                 <h1 class="text=xl font-medium">Unpatched Apache Struts Vulnerability</h1>
-                <p class="pl-4">- Once inside, attackers maintained persistent access over a period of several months. They bypassed detection by encrypting exfiltrated data and masking their tracks. Equifax's security monitoring systems failed to detect the unauthorized data transfers, enabling one of the largest personal information thefts in history.</p>
+                <p class="">Once inside, attackers maintained persistent access over a period of several months. They bypassed detection by encrypting exfiltrated data and masking their tracks. Equifax's security monitoring systems failed to detect the unauthorized data transfers, enabling one of the largest personal information thefts in history.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personally Identifiable Information (PII)</h5>
-                <p class="pl-4">- In some cases, attackers accessed driver’s license numbers and credit dispute documents. These contained sensitive financial details submitted to Equifax, significantly widening the breach’s impact.</p>
+                <p class="">In some cases, attackers accessed driver’s license numbers and credit dispute documents. These contained sensitive financial details submitted to Equifax, significantly widening the breach’s impact.</p>
 
                 <h5 class="text-xl font-medium">Driver’s Licenses and Dispute Records</h5>
-                <p class="pl-4">- In addition to personal data, the hackers also stole and leaked confidential company information. This included unreleased films and scripts, future film plans, and sensitive email correspondence between employees and film executives. The release of this proprietary information caused significant financial damage and reputational harm to Sony Pictures, disrupting their business operations and strategic planning.</p>
+                <p class="">In addition to personal data, the hackers also stole and leaked confidential company information. This included unreleased films and scripts, future film plans, and sensitive email correspondence between employees and film executives. The release of this proprietary information caused significant financial damage and reputational harm to Sony Pictures, disrupting their business operations and strategic planning.</p>
 
-                <h5 class="text-xl font-medium">Impact on the Company and Customers</h5>
-                <p class="pl-4">- The Equifax breach severely damaged the company’s reputation. Top executives, including the CEO, CIO, and CSO, resigned. The breach led to more than 200 lawsuits, regulatory investigations, and congressional hearings. In 2019, Equifax agreed to a settlement of up to $700 million with the FTC, CFPB, and state attorneys general. The case prompted nationwide discussions on data privacy, consumer protection, and cybersecurity practices. Consumers were offered free credit monitoring, but many continue to face long-term identity fraud risks.</p>
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">The Equifax breach severely damaged the company’s reputation. Top executives, including the CEO, CIO, and CSO, resigned. The breach led to more than 200 lawsuits, regulatory investigations, and congressional hearings. In 2019, Equifax agreed to a settlement of up to $700 million with the FTC, CFPB, and state attorneys general. The case prompted nationwide discussions on data privacy, consumer protection, and cybersecurity practices. Consumers were offered free credit monitoring, but many continue to face long-term identity fraud risks.</p>
+            </div>
+
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://archive.epic.org/privacy/data-breach/equifax/">https://archive.epic.org/privacy/data-breach/equifax/</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.breachsense.com/blog/equifax-data-breach/">https://www.breachsense.com/blog/equifax-data-breach/</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 		
