--- a/companies-north-america/yahoo.html
+++ b/companies-north-america/yahoo.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Types of Vulnerabilities</title>
+		<title>Yahoo</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/pictiure-north-america/yahoo.avif" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,24 +318,40 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">State-Sponsored Actors and Initial Infiltration</h1>
-                <p class="pl-4">- The attack was attributed to a group of state-sponsored actors believed to be operating under the direction of Russia’s FSB. They exploited a security vulnerability in Yahoo's infrastructure to gain unauthorized access to user accounts. Attackers gained access to Yahoo’s internal network through the use of stolen employee credentials. Once inside, they were able to access the company’s databases and exfiltrate massive amounts of sensitive data. The breach continued for several years before being detected.
+                <p class="">The attack was attributed to a group of state-sponsored actors believed to be operating under the direction of Russia’s FSB. They exploited a security vulnerability in Yahoo's infrastructure to gain unauthorized access to user accounts. Attackers gained access to Yahoo’s internal network through the use of stolen employee credentials. Once inside, they were able to access the company’s databases and exfiltrate massive amounts of sensitive data. The breach continued for several years before being detected.
                 </p>
                 <h1 class="text=xl font-medium"> Persistent Access and Weak Security Practices</h1>
-                <p class="pl-4">- Yahoo had been using outdated security measures, including weak encryption practices. Attackers were able to bypass these defenses, making the breach worse. Once inside, they used forged cookies to maintain persistent access to users' accounts.</p>
+                <p class="">Yahoo had been using outdated security measures, including weak encryption practices. Attackers were able to bypass these defenses, making the breach worse. Once inside, they used forged cookies to maintain persistent access to users' accounts.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium"> Personal Account Information</h5>
-                <p class="pl-4">- The data stolen included full names, email addresses, phone numbers, dates of birth, and hashed passwords (though many were encrypted). This information is valuable for identity theft and other malicious activities.</p>
+                <p class="">The data stolen included full names, email addresses, phone numbers, dates of birth, and hashed passwords (though many were encrypted). This information is valuable for identity theft and other malicious activities.</p>
 
                 <h5 class="text-xl font-medium">Security Questions and Answers</h5>
-                <p class="pl-4">- Sensitive security information, including answers to security questions (such as "What is your mother’s maiden name?"), was also compromised. This made it easier for attackers to access other accounts or services linked to Yahoo.</p>
+                <p class="">Sensitive security information, including answers to security questions (such as "What is your mother’s maiden name?"), was also compromised. This made it easier for attackers to access other accounts or services linked to Yahoo.</p>
 
-                <h5 class="text-xl font-medium">Impact on the Company and Customers</h5>
-                <p class="pl-4">- The Yahoo breach had far-reaching consequences, especially for the company’s reputation. As one of the largest data breaches in history, it reduced Yahoo's value during its acquisition by Verizon by approximately $350 million. The breach led to several lawsuits, including class-action suits, and was a focal point in cybersecurity and data privacy discussions. Yahoo's brand was severely damaged, as it was criticized for both the delay in discovering the breach and the lack of timely disclosure. The breach also affected users, many of whom were forced to change their passwords and update security questions. Yahoo also provided credit monitoring services to affected users, but many continued to face risks related to their compromised data. The breach was a key factor in the growing global conversation about the importance of cybersecurity in tech companies, particularly regarding user data protection.
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">The Yahoo breach had far-reaching consequences, especially for the company’s reputation. As one of the largest data breaches in history, it reduced Yahoo's value during its acquisition by Verizon by approximately $350 million. The breach led to several lawsuits, including class-action suits, and was a focal point in cybersecurity and data privacy discussions. Yahoo's brand was severely damaged, as it was criticized for both the delay in discovering the breach and the lack of timely disclosure. The breach also affected users, many of whom were forced to change their passwords and update security questions. Yahoo also provided credit monitoring services to affected users, but many continued to face risks related to their compromised data. The breach was a key factor in the growing global conversation about the importance of cybersecurity in tech companies, particularly regarding user data protection.
                 </p>
+            </div>
+
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.strongdm.com/what-is/yahoo-data-breach">https://www.strongdm.com/what-is/yahoo-data-breach</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://en.wikipedia.org/wiki/Yahoo_data_breaches">https://en.wikipedia.org/wiki/Yahoo_data_breaches</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 		
