--- a/protective-measure.html
+++ b/protective-measure.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>ThreatScope</title>
+		<title>Protective Measures Overview</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="assets/css/fonts.css">
 	</head>
@@ -289,7 +289,7 @@
 				<div class="flex items-center justify-center">
                     <div class="block px-4">
                         <h4 class="text-5xl font-medium">Protective Measures</h4>
-                        <p class="mt-4 text-gray-200 md:text-left text-justify">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                        <p class="mt-4 text-gray-200 md:text-left text-justify">Welcome to our guide on Protective Measures — essential steps to secure both your physical and digital environments. Learn more about Physical Protective Measures and Software Protective Measures to stay protected in today’s connected world.</p>
                     </div>
 				</div>
 				<div class="flex justify-center mt-8 px-4 md:mt-0">
@@ -298,26 +298,56 @@
 			</div>
 		</div>
 
-		
-		<div class="md:px-2 px-4 space-y-4 max-w-6xl mx-auto">
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
-                <h5 class="text-xl font-medium">Physical Protective Measures</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos. Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. </p>
-                <div>
-                    <a href="#" class="px-4 py-1 rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+        <div class="px-4 md:px-2 max-w-6xl mx-auto mt-10 space-y-6">
+            <!-- Physical Protective Measures Card -->
+            <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 relative flex flex-col md:flex-row mx-10">
+                <a href="./assets/physical-protective-measures-container.png" target="image-viewer" class="flex-shrink-0">
+                    <img 
+                        src="./assets/physical-protective-measures-container.png" 
+                        class="w-full md:w-[300px] h-[220px] object-cover rounded mb-4 md:mb-0 md:mr-4 border border-gray-700 filter grayscale hover:grayscale-0 transition duration-300"
+                        alt="Physical Security"
+                    />
+                </a>
+                <div class="flex flex-col justify-between flex-grow relative">
+                    <div>
+                        <h5 class="text-xl font-medium">Physical Protective Measures</h5>
+                        <p>
+                            Physical protective measures involve using tangible tools and barriers to prevent unauthorized access to buildings, systems, and sensitive areas. These include surveillance cameras, locked server rooms, biometric access systems, and trained security personnel.
+                        </p>
+                    </div>
+                    <div class="mt-4 md:mt-0 md:absolute md:bottom-4 md:right-4">
+                        <a href="#" class="block md:inline-block w-full md:w-auto text-center px-4 py-2 rounded bg-indigo-500 hover:bg-indigo-600 transition ease-in-out duration-200">
+                            Learn More
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
-                <h5 class="text-xl font-medium">Software Protective Measures</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos. Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                <div>
-                    <a href="#" class="px-4 py-1 rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+            <!-- Software Protective Measures Card -->
+            <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 relative flex flex-col md:flex-row mx-10">
+                <a href="./assets/software-protective-measures-container.png" target="image-viewer" class="flex-shrink-0">
+                    <img 
+                        src="./assets/software-protective-measures-container.png" 
+                        class="w-full md:w-[300px] h-[220px] object-cover rounded mb-4 md:mb-0 md:mr-4 border border-gray-700 filter grayscale hover:grayscale-0 transition duration-300"
+                        alt="Software Security"
+                    />
+                </a>
+                <div class="flex flex-col justify-between flex-grow relative">
+                    <div>
+                        <h5 class="text-xl font-medium">Software Protective Measures</h5>
+                        <p>
+                            Software protective measures are digital tools designed to defend systems and data against cyber threats like malware, hacking, and unauthorized access. These include antivirus programs, firewalls, encryption tools, and regular updates.
+                        </p>
+                    </div>
+                    <div class="mt-4 md:mt-0 md:absolute md:bottom-4 md:right-4">
+                        <a href="#" class="block md:inline-block w-full md:w-auto text-center px-4 py-2 rounded bg-indigo-500 hover:bg-indigo-600 transition ease-in-out duration-200">
+                            Learn More
+                        </a>
+                    </div>
                 </div>
             </div>
-			
-		</div>
-		
+        </div>
+
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
