--- a/companies-north-america/target-corporation.html
+++ b/companies-north-america/target-corporation.html
@@ -288,13 +288,13 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">North America</a>
+                        <a href="../continents/north-america.html" class="text-sm">North America</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Target Corporation</a>
+                        <a href="../companies-north-america/target-corporation.html" class="text-sm">Target Corporation</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Target Corporation</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
