--- a/continents/north-america.html
+++ b/continents/north-america.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Types of Vulnerabilities</title>
+		<title>Companies in North America</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -287,11 +287,11 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="/companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="/famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">North America</a>
+                    <a href="/continents/north-america.html" class="text-sm">North America</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in North America</h3>
@@ -301,40 +301,40 @@
 		</div>
 		
         <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-north-america/yahoo.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/pictiure-north-america/yahoo(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Yahoo</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-north-america/colonial-pipeline.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/pictiure-north-america/colonial-pipeline(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Colonial Pipeline</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="../companies-north-america/equifax.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/pictiure-north-america/Equifax(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Equifax</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-north-america/marriot-international.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/pictiure-north-america/marriot(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Marriott International</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-north-america/target-corporation.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/pictiure-north-america/Target (2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Target Corporation</p>
