--- a/continents/south-america.html
+++ b/continents/south-america.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Types of Vulnerabilities</title>
+		<title>Companies in South America</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -287,11 +287,11 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a href="/companies-affected.html" class="text-sm">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="/famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">South America</a>
+                    <a href="/continents/south-america.html" class="text-sm">South America</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in South America</h3>
@@ -301,40 +301,40 @@
 		</div>
 		
         <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-south-america/banco-de-chile.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/picture-south-america/Banco-de-chile.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Banco De Chile</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-south-america/consejo-nacional-electoral.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/picture-south-america/concejo-nacional-electoral.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Consejo Nacional Electoral</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-south-america/embratel.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/picture-south-america/embratel(2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Embratel</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-south-america/ministerio-de-salud-publica.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/picture-south-america/Ministerio.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Ministerio De Salud Publica</p>
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
-                <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
+            <a href="/companies-south-america/telecom-argentina.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/picture-south-america/telecom.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
                     <p class="text-white text-lg font-semibold">Telecom Argentina</p>
