--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -287,7 +287,7 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="/companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
                     <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
                 </div>
@@ -307,7 +307,7 @@
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="/continents/asia.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -331,7 +331,7 @@
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="/continents/north-america.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -339,7 +339,7 @@
                 </div>
             </a>
 
-            <a href="#" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="/continents/south-america.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
